public/style.css
body {
	text-align: center;
}

#page {
	text-align: left;
	width: 800px;
	margin: 40px auto;
}

/***** navigation *****/
 
#navigation {
	font-family: Georgia, Times, serif;
	font-size: 18px;
	margin-bottom: 20px;
}

#navigation ul {
	margin: 0;
	padding: 0 0 20px 10px;
	border-bottom: 1px solid #333;
	color: #333;
}

#navigation ul li {
	margin: 0;
	padding: 0;
	display: inline;
	list-style-type: none;
}

#navigation a
{
  float: left;
  line-height: 14px;
  font-weight: bold;
  margin: 0 10px 4px 10px;
  text-decoration: none;
  color: #999;
	padding-bottom: 4px;
	background: transparent;
}

#navigation a:hover {
	color: #666;
	border-bottom: 4px solid #666;
}
/* could be generated programatically? */
.index .index, .create .create, .list .list, .search .search {
	color: #333 !important;
	border-bottom: 4px solid #333;
}
/***** footer *****/

#footer {
	margin: 20px 0 0 0;
	border-top: 5px double #333;
	width: 800px;
}
/***** index *****/


/***** create *****/
#writing, #editing {
  border: 1px solid #333;
  padding: 4px;
  width: 790px;
  height: 400px;
  font-family: Verdana, Arial, sans-serif;
  font-size: 16px;
}

/***** view *****/
#display {
	font-family: Verdana, Arial, sans-serif;
	font-size: 16px;
}

